# 99bottles

./: .gitignore  chapter_03.md  concretely_abstract.py  full-song.txt  incomprehensibly_concise.py  ninetyninebottles.py  pyproject.toml  shameless_green.py  tests.py
